--- a/newtab/styles.css
+++ b/newtab/styles.css
@@ -7,12 +7,12 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
-}
-.ytp-title-text {
-	font-size:0px
-}
-.ytp-chrome-top ytp-show-cards-title {
-	opacity:0
+	overflow: hidden;
+	-webkit-filter: blur(15px);
+	-moz-filter: blur(15px);
+	-o-filter: blur(15px);
+	-ms-filter: blur(15px);
+	filter: blur(15px);
 }
 .yt-cover{
 	top: 0;
