--- a/newtab/styles.css
+++ b/newtab/styles.css
@@ -1,24 +1,17 @@
 body {
 	margin: 0;
+	padding:0
 }
-.yt-video {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	overflow: hidden;
-	-webkit-filter: blur(15px);
-	-moz-filter: blur(15px);
-	-o-filter: blur(15px);
-	-ms-filter: blur(15px);
-	filter: blur(15px);
-}
+
 .yt-cover{
 	top: 0;
 	bottom:0;
 	right:0;
 	left:0;
 	position: absolute;
-	z-index:1000;
+	z-index:100;
+}
+
+.yt-video {
+	z-index: 1;
 }
