--- a/newtab/styles.css
+++ b/newtab/styles.css
@@ -14,9 +14,9 @@ body {
 
 .yt-video {
 	z-index: 1;
-	position: fixed;
-	width: 100vw;
-	display: inline-block;
+	position: relative;
+	height: 100%;
+	width: 100%;
 }
 
 .yt-video::after {
