--- a/newtab/styles.css
+++ b/newtab/styles.css
@@ -30,3 +30,18 @@ body {
 	position: absolute;
 	width: 100%;
 }
+
+@media(max-aspect-ratio: 1440/810) {
+    body {
+        position: relative;
+        min-height: 100vh;
+    }
+    .yt-video {
+        position: absolute;
+    }
+    .yt-video > iframe {
+        position: relative;
+        width: 100%;
+        height:  100%;
+    }
+}
