--- a/newtab/styles.css
+++ b/newtab/styles.css
@@ -18,6 +18,7 @@ body {
 	position: relative;
 	height: 100%;
 	width: 100%;
+	mask-image: linear-gradient(to top, black 55%, transparent 98%);
 }
 
 .yt-video::after {
